give actions area a z-index to ensure it's always on top

--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,7 @@ html {
     -moz-border-top-left-radius:8px;
     background:#111;
     color:#fff;
+    z-index:300;
 }
 
 #actions a {
